--- a/gb/20/1/15/n11795643.md
+++ b/gb/20/1/15/n11795643.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/zdqyi2905/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zdqyi2905/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/myujtv3571/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>室内设计师观神韵：盼神传文化早日回归</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/2001141821582639-600x400.jpg" />
-<h6>室内设计师Clive Alexander于2020年1月14日晚上，在曼彻斯特派雷斯剧院观看神韵。（肖悯／大纪元）
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/2001141821582639-600x400.jpg" />
+<h6>室内设计师Clive Alexander于2020年1月14日晚上，在曼彻斯特派雷斯剧院观看神韵。（肖悯/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年01月15日讯】（大纪元记者肖悯英国曼彻斯特报导）2020年1月14日，<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>国际艺术团在<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E6%9B%BC%E5%BD%BB%E6%96%AF%E7%89%B9%E6%B4%BE%E9%9B%B7%E6%96%AF%E5%89%A7%E9%99%A2.md">曼彻斯特派雷斯剧院</a>（MANCHESTER Palace Theatre）的第四场演出令无数观众沈醉。“非常令人感动，触及心灵。”欣赏过神韵后，Clive Alexander不住称赞。</p>
-<p>Clive Alexander是一家房屋装修公司的老板，同时也是一名室内设计师。<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>的完美令他感到惊喜，“无比精彩！非常非常专业！色彩斑斓，充满生机，也非常有意义。音乐也非常非常动听， 服饰无比美丽，<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md">艺术家</a>们的高超技巧更是令人钦佩。”Alexander接连称赞好几次“优秀！”</p>
+	<p>【大纪元2020年01月15日讯】（大纪元记者肖悯英国曼彻斯特报导）2020年1月14日，<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E6%9B%BC%E5%BD%BB%E6%96%AF%E7%89%B9%E6%B4%BE%E9%9B%B7%E6%96%AF%E5%89%A7%E9%99%A2.md#1">曼彻斯特派雷斯剧院</a>（MANCHESTER Palace Theatre）的第三场演出令无数观众沈醉。“非常令人感动，触及心灵。”欣赏过<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后，Clive Alexander不住称赞。</p>
+<p>Clive Alexander是一家房屋装修公司的老板，同时也是一名室内设计师。神韵的完美令他感到惊喜，“无比精彩！非常非常专业！色彩斑斓，充满生机，也非常有意义。音乐也非常非常动听， 服饰无比美丽，<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md#1">艺术家</a>们的高超技巧更是令人钦佩。”Alexander接连称赞好几次“优秀！”</p>
 <p>从设计师的角度来讲，神韵给Alexander印象最深的是“对称性”，他说，“整体的设计和色彩的运用等，所有部分都非常协调融洽，赏心悦目。”</p>
-<p>神韵将人对神应有的虔诚，编排成小舞剧呈现于舞台之上，他认为：“没有什么比这更美好了！这确实应该弘扬，（对神的<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>）应该得到崇尚，并带回人们的文化中。”</p>
+<p>神韵将人对神应有的虔诚，编排成小舞剧呈现于舞台之上，他认为：“没有什么比这更美好了！这确实应该弘扬，（对神的<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>）应该得到崇尚，并带回人们的文化中。”</p>
 <p>回想大幕初开时，祥云缭绕，仙子起舞，圣王带领众神下世开创灿烂文明的景象，让他赞叹：“难以置信！色彩斑斓的（天幕）背景和舞蹈家们的互动效果，真是无与伦比，精彩至极！”</p>
 <p>Alexander认为，通过看神韵“可以了解中国（传统）文化，从背景中可以看到从前和现在世界的样子，我觉得这很有意思。真的很棒，就像一堂历史课。”演出中传统的东方韵味也令他回味：“的确，可以感受到（东方韵味）在其中的关连，演出给人的感受、舞蹈和音乐，以及演员们共同起舞时，都浑然一体，非常棒的感觉，赏心悦目。”</p>
 <p>Alexander称赞女高音歌唱家：“她真是无与伦比！歌声优美动听，钢琴伴奏也无比美妙，真优秀！非常棒！”对于歌词中提到遵从传统将引领人回归天堂，他认为：“确实，以史为鉴可以帮助人看清当下的事物，希望他们（历史和传统）都可以回归。”◇</p>
@@ -19,37 +19,44 @@
 	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/15/n11795643.htm">室内设计师观神韵：盼神传文化早日回归</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/8/19/n11463222.htm">逯耀东 话魏晋史学——长城边的冲突与调和</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/30/n11223706.htm">“旧香居”收集旧书水准高 爱书客络绎不绝</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/19/n10987851.htm">儒者之风 孔德成百年纪念会暨纪念展登场</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/7/n10896687.htm">书风独帜的台静农先生</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/5/16/n10399981.htm">后花园与小确幸</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793546.htm">港男纪律部队坠楼过程被录 评论：老天有眼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11781408.htm">【独家】专访郑文杰：被虐待致精神崩溃（三）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11790802.htm">中共外交部胡言乱语实录</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776359.htm">简化汉字“圣”包藏什么祸心？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11765864.htm">?美国四位总统的神异经历</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760836.htm">他将前世今生的爱 又带到了妻子的来世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772982.htm">【才子佳人】不以貌取人 诸葛亮娶了位发明家</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791109.htm">内幕：美军如何第一时间确认炸死苏莱曼尼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791346.htm">中共高调“奔小康” 43斤女大学生因贫去世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791008.htm">【新闻看点】川普邀200人见证签署 促习守承诺</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793352.htm">【热点互动】2020中国经济灰犀牛与黑天鹅</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/28/n11751523.htm">【三国英雄】之十：奉天子带来的机遇和风险</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791006.htm">【新闻看点】港台政策全盘输 习下步如何走？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788333.htm">杜汶泽请求蔡英文：救助流亡到台湾的香港人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791054.htm">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788080.htm">恭喜蔡英文 何韵诗讽林郑为“反共之母”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788570.htm">疑涉港警贪腐题材 郭富城梁朝伟新片未过审</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791826.htm">网民：看了这段短片就知道伊朗“不可怕”</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/4/2/n4402390.md#1">神韵英国巡演完美落幕 观众意犹未尽相约明年</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/4/2/n4402474.md#1">“我喜欢神韵展现的正义战胜邪恶”</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/4/2/n4402490.md#1">“神韵是一场与众不同的演出”</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/4/2/n4402495.md#1">警官：神韵一定会去大陆演出</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/4/25/n4420222.md#1">神韵欧洲巡演2月43场 感动各界观众</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/1/3/n4608700.md#1">“神韵表现了中国文化是神传文化”</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795643.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/13/n10781989.md#1" target="_blank">林辉：北京反驳彭斯 需要补历史课的是谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916061.md#1" target="_blank">同化真善忍 一位澳洲人寻获的幸福人生</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/26/n12711986.md#1">预言试析：共产党亡于何时？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/12/29/n12651261.md#1">轮回转生 冤家变成母子</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12731260.md#1">【解密时分】24亿美元 史上十大最贵战机</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12731871.md#1">【拍案惊奇】CNN忽批贺锦丽 蓬佩奥再警示拜登</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728803.md#1">【时事军事】以色列警告美 放宽伊朗制裁即宣战</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727425.md#1">接受发型师义剪 流浪汉秒变绅士男震惊网友</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726784.md#1">【秦鹏直播】缅军方抓昂山素季 急坏拜登习近平？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728478.md#1">中共官媒群批“厕所革命”打了谁的脸？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726330.md#1">51岁周传雄登陆综 22岁孟美岐当导师引狂批</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12726845.md#1">金马影后马思纯疑患抑郁症 停工半年后首发声</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728875.md#1">获陈坤夸赞阳光又漂亮 杨颖默默点赞视频自励</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727150.md#1">立百病毒致死率高 专家示警下一场大流行威胁</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726617.md#1">这时喝水排毒快！早晚喝对水养生 还能控血糖</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727769.md#1">英军战机空袭伊拉克洞穴 准确歼灭IS成员</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726294.md#1">中医师用2种水果干煮水喝 养胃、改善脂肪肝</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/15/n11795643.htm">室内设计师观神韵：盼神传文化早日回归</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/myujtv3571/djy/blob/master/gb/20/1/15/n11795643.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
